# QuadsimCode

HW1/: HW1_description
HW1/quadsim/: package.xml
HW1/quadsim/launch/: quadsim_base.launch  vision_nav.launch
HW1/quadsim/msg/: ImageData.msg
HW1/quadsim/params/: quadsim.yaml  rosflight_params_quadsim.yaml
HW1/quadsim/scripts/: controller_node.py  feature_tracker_node.py  imu_integrator_node.py
HW1/quadsim/scripts/controllers/: altitude_controller.py  attitude_controller.py  feature_tracker.py  optical_flow_controller.py  trajectory_follower.py  velocity_controller.py
HW1/quadsim/scripts/utils/: quaternion.py  state.py  trajectory.py
HW5/code_notes/: voxel_map.py  voxel_map_node.py
HW5/quadsim/: .gitignore  CMakeLists.txt  README.md
HW5/quadsim/config/: lidar_visualization.rviz  voxel_visualization.rviz
HW5/quadsim/launch/: quadsim_base.launch  quadsim_optical_flow.launch  quadsim_traj_gen.launch  rqt_plotter.launch  vision_nav.launch
HW5/quadsim/params/: quadsim.yaml  sinusoid_traj.yaml
HW5/quadsim/scripts/: a_star_node.py  controller_node.py  feature_tracker_node.py  imu_integrator_node.py  optical_flow_controller_node.py  point_triangulation_node.py  quadsim_tf2.py  velocity_controller_node.py  voxel_map.py  voxel_map_node.py
HW5/quadsim/scripts/controllers/: attitude_controller.py  feature_tracker.py  pid.py  trajectory_follower.py
HW5/quadsim/scripts/quad_a_star/: a_star.py  path_smoother.py  three_dim_test.py  two_dim_test.py
HW5/quadsim/scripts/utils/: math_tools.py  vision_tools.py
HW7/: templateCreator.py  templateMatching.py
