<?xml version="1.0"?>
<package format="2">
  <name>quadsim</name>
  <version>0.0.0</version>
  <description>The quadsim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="seth@todo.todo">seth</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rosflight_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <depend>cmake_modules</depend>
  <depend>rosflight_firmware</depend>
  <depend>rosflight_holodeck</depend>


</package>
